# real-estate-prices-research

./: README.md  get_imovel_web_data.py  get_sao_paulo_districts_data.py  get_sao_paulo_neighborhoods_data.py  get_zap_imoveis_data.py  pyproject.toml
csv_files/: sao_paulo_districts_names.csv  zap_imoveis_data.csv
data/clean/real_state/imovel_web/: 2023-03-28_imoveis_web_data.csv
data/clean/real_state/zap_imoveis/: 2023-03-28_zap_imoveis_data.csv
data/cleaned/real_state/zap_imoveis/: 2023-03-28_zap_imoveis_data.csv
data/raw/real_state/imovel_web/: 2023-03-27_imoveis_web_data.csv  2023-03-28_imoveis_web_data.csv  imoveis_web_data.csv
data/raw/real_state/zap_imoveis/: 2023-03-27_zap_imoveis_data.csv  2023-03-28_zap_imoveis_data.csv  zap_imoveis_data.csv
src/data_cleaners/imovel_web/: data_cleaner_imovel_web.py
src/data_cleaners/zap_imoveis/: data_cleaner_zap_imoveis.py
src/entities/: RealState.py  RealStateClean.py
src/scrappers/districts/: get_sao_paulo_districts_data.py
src/scrappers/imovel_web/: get_imovel_web_data.py
src/scrappers/zap_imoveis/: get_zap_imoveis_data.py
utils/: csv_utils.py  utils.py
