[tool.poetry]
name = "real-state-research"
version = "0.1.0"
description = ""
authors = ["wallyson ruan <wallyson.ruan@thoughtworks.com>"]
readme = "README.md"
packages = [{include = "real_state_research"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.4"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
